// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> renders the component correctly 1`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-0"
      >
        Count : 
        0
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-0"
      >
        Controllers
      </p>
      <button
        class="chakra-button css-0"
        type="button"
      >
        Increase
      </button>
      <button
        class="chakra-button css-0"
        type="button"
      >
        Decrease
      </button>
      <button
        class="chakra-button css-0"
        type="button"
      >
        Reset
      </button>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-0"
      />
    </div>
  </div>
</div>
`;

exports[`<Counter /> renders the component correctly 2`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-0"
      >
        Count : 
        100
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-0"
      >
        Controllers
      </p>
      <button
        class="chakra-button css-0"
        type="button"
      >
        Increase
      </button>
      <button
        class="chakra-button css-0"
        type="button"
      >
        Decrease
      </button>
      <button
        class="chakra-button css-0"
        type="button"
      >
        Reset
      </button>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-0"
      >
        Count is max.
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> renders the special component correctly 1`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-0"
      >
        Count : 
        30
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-0"
      >
        Controllers
      </p>
      <button
        class="chakra-button css-0"
        type="button"
      >
        Increase
      </button>
      <button
        class="chakra-button css-0"
        type="button"
      >
        Decrease
      </button>
      <button
        class="chakra-button css-0"
        type="button"
      >
        Reset
      </button>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-0"
      >
        Count is min.
      </p>
    </div>
  </div>
</div>
`;
